<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/amount"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:textAlignment="textEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/source_measure_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source_mesunit"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        app:layout_constraintStart_toEndOf="@id/amount"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/equals_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals_text"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        app:layout_constraintStart_toEndOf="@id/source_measure_unit"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:text="@string/result"
        android:textAlignment="textEnd"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/target_measure_unit"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/target_measure_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/target_mesunit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/convert_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:checkedButton="@id/fahrenheit_celsius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount">

        <RadioButton
            android:id="@+id/fahrenheit_celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fahrenheit_celsius"/>

        <RadioButton
            android:id="@+id/celsius_fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celsius_fahrenheit"/>

        <RadioButton
            android:id="@+id/miles_kilometers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miles_kilometers"/>

        <RadioButton
            android:id="@+id/kilometers_miles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kilometers_miles"/>

        <RadioButton
            android:id="@+id/gallons_liters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallons_liters"/>

        <RadioButton
            android:id="@+id/liters_gallons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liters_gallons"/>

        <RadioButton
            android:id="@+id/inches_centimeters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inches_centimeters"/>

        <RadioButton
            android:id="@+id/centimeters_inches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centimeters_inches"/>

    </RadioGroup>

    <Switch
        android:id="@+id/round_up_switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/round_up"
        android:checked="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/convert_options" >

    </Switch>

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/round_up_switch" />

</androidx.constraintlayout.widget.ConstraintLayout>